test/language/spec/templates/invalid/template_arg_count.topo
// TEST: template argument count mismatch
// EXPECT-ERROR: template argument count mismatch

using Int = std::cpp17::int32_t;
using Double = std::cpp17::double;

namespace container {
  public:
    template<typename T>
    class Vector {
      public:
        void push_back(T value);
    }

    void process(Vector<Int, Double> data);
}
